require Jenkins 2.479.1 and Java 17